--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
